--- a/app/budget/directives/budgetCosts/courseCostsRow/courseCostsRow.css
+++ b/app/budget/directives/budgetCosts/courseCostsRow/courseCostsRow.css
@@ -1,21 +1,3 @@
-.course-costs-row {
-	width: 100%;
-}
-
-.course-costs__table-header {
-	width: 10%;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	border-bottom: 1px solid #ddd;
-}
-
-.course-costs__course-title {
-	padding-top: 15px;
-	padding-bottom: 10px;
-	padding-left: 20px;
-	font-weight: bold;
-}
-
 .course-costs__table-cell {
 	background-color: #f8f8f8;
 	padding-top: 10px;
@@ -33,25 +15,6 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.course-costs__total-container {
-	width: 100%;
-	background-color: #f8f8f8;
-	height: 53px;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	padding-right: 5px;
-}
-
-.course-costs__warning {
-	color: #ce4844;
-	visibility: hidden;
-}
-
-.course-costs__warning--show {
-	visibility: visible;
 }
 
 .course-costs__number-input {
@@ -74,26 +37,4 @@
 
 .course-costs__revert-ui:hover {
 	background-color: #eee;
-}
-
-.course-costs__table-header--comments {
-	padding-left: 20px;
-}
-
-.course-totals-row {
-	height: 30px;
-}
-
-.course-totals-row__cell {
-	padding-top: 15px;
-}
-
-.course-totals-row__first {
-	padding-left: 20px;
-	text-align: center;
-}
-
-.course-costs__table-header--total-costs {
-	text-align: right;
-	padding-right: 27px;
 }
